# Skull_King

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Example.hpp  card.h  deck.h  game.h  player.h
src/: Example.cpp  card.cpp  deck.cpp  game.cpp  main.cpp  player.cpp
tests/: CMakeLists.txt  Cardstest.cpp  Playerstest.cpp  Scoretest.cpp  Unittests.cpp  Wintest.cpp
